@@ -1,6 +1,5 @@
 /**
- * This is the main package to get started with jRTPS.
- * It contains classes that can be used to start communicating with remote RTPS clients.
+ * Top level jRTPS package.
  */
 package net.sf.jrtps;
 
