@@ -2,9 +2,9 @@ package net.sf.jrtps.udds;
 
 import java.util.List;
 
-import net.sf.jrtps.Sample;
-import net.sf.jrtps.SampleListener;
 import net.sf.jrtps.builtin.TopicData;
+import net.sf.jrtps.rtps.Sample;
+import net.sf.jrtps.rtps.SampleListener;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
