@@ -17,9 +17,6 @@ import net.sf.jrtps.Configuration;
 import net.sf.jrtps.InconsistentPolicy;
 import net.sf.jrtps.Marshaller;
 import net.sf.jrtps.QualityOfService;
-import net.sf.jrtps.RTPSParticipant;
-import net.sf.jrtps.RTPSReader;
-import net.sf.jrtps.RTPSWriter;
 import net.sf.jrtps.builtin.ParticipantData;
 import net.sf.jrtps.builtin.ParticipantDataMarshaller;
 import net.sf.jrtps.builtin.ParticipantMessage;
@@ -33,6 +30,9 @@ import net.sf.jrtps.builtin.TopicDataMarshaller;
 import net.sf.jrtps.message.parameter.QosDurability;
 import net.sf.jrtps.message.parameter.QosHistory;
 import net.sf.jrtps.message.parameter.QosReliability;
+import net.sf.jrtps.rtps.RTPSParticipant;
+import net.sf.jrtps.rtps.RTPSReader;
+import net.sf.jrtps.rtps.RTPSWriter;
 import net.sf.jrtps.types.Duration;
 import net.sf.jrtps.types.EntityId;
 import net.sf.jrtps.types.Guid;
